--- a/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.html
@@ -1,1 +1,11 @@
-<p>vista-inicio works!</p>
+<div class="ventana">
+    <div class="logo">
+        <img src="" alt="">
+    </div>
+    <div class="contenedor">
+        <div class="botones">INICIO</div>
+        <div class="botones">ACERCA DE NOSOTROS</div>
+        <div class="botones">CONTACTO</div>
+        <div class="botones">UBICACIÓN</div>
+    </div>
+</div>
