--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+*{
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
