terminado de los dos navbar modelos

--- a/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.html
@@ -1,1 +1,2 @@
-<p>vista-inicio works!</p>
+<app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
+<app-navbar-pagina-principal></app-navbar-pagina-principal>
