--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.html
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.html
@@ -1,10 +1,16 @@
-<div class='right-navbar'>
-    <div class='buttons'>
-        <button class='registrase'> registrarse</button>
-        <button class='iniciar-sesion'>iniciar sesión</button>
+<div class='navbar'>
+    <div class='logo-menu'>
+        <img class='logo' src='./assets/PARALELO2.png'>
     </div>
-    <div class='fotos'>
-        <div class='foto1'></div>
-        <div class='foto2'></div>
+    <div class='options-menu'>
+        <div class='incio-button'>
+            <span><a>INICIO</a></span>
+        </div>
+        <div class='contacto-button'>
+            <span><a>CONTACTO</a></span>
+        </div>
+        <div class='about-button'>
+            <span><a>ACERCA DE NOSOTROS</a></span>
+        </div>
     </div>
 </div>
