terminado de modelo de perfil de mecanico

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-vista-inicio></app-vista-inicio>
+<app-vista-datos-perfil-mecanico></app-vista-datos-perfil-mecanico>
+<!--<app-vista-inicio></app-vista-inicio>-->
 <router-outlet></router-outlet>
