--- a/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
+++ b/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
@@ -1,1 +1,18 @@
-<p>nabvar-perfil-mecanico works!</p>
+<div class='navbar'>
+    <div class='logo-menu'>
+        <div class='contenedor'>
+            <img class='logo' src='./assets/PARALELO2.png'>
+        </div>
+    </div>
+    <div class='options-menu'>
+        <div class='incio-button'>
+            <span><a>INICIO</a></span>
+        </div>
+        <div class='contacto-button'>
+            <span><a>REGISTRO DE VEHÍCULOS</a></span>
+        </div>
+        <div class='about-button'>
+            <span><a>VEHÍCULOS REGISTRADOS</a></span>
+        </div>
+    </div>
+</div>
