guardado resolviendo el tema del navbar

--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
@@ -9,27 +9,25 @@
     </div>
     <div class='form-square'>
         <div class='form-square-background'>
-            <form class='form'>
+            <form class='registerAuth-form'>
                 <div class='form-tittle'>
-                    <span>Create Post</span>
+                    <span>Register</span>
                 </div>
                 <div class='group1'>
-                    <input type="text" placeholder="Enter ID" formControlName="ID" required><span class='bar'></span>
-                    <label for=''>ID</label>
+                    <input type="text" placeholder="Enter your name" required><span class='bar'></span>
+                    <label for=''>name</label>
                 </div>
                 <div class='group2'>
-                    <input type="text" placeholder="Enter Title" formControlName="title" required><span class='bar'></span>
-                    <label for=''>Title</label>
+                    <input type="text" placeholder="Enter your email" required><span class='bar'></span>
+                    <label for=''>email</label>
                 </div>
                 <div class='group3'>
-                    <input type="text" placeholder="Enter Category" formControlName="category" required><span class='bar'></span>
-                    <label for=''>Category</label>
+                    <input type="text" placeholder="Enter your password" required><span class='bar'></span>
+                    <label for=''>password</label>
                 </div>
-                <div class='group4'>
-                    <input type="text" placeholder="Enter Body" formControlName="body" required><span class='bar'></span>
-                    <label for=''>Body</label>
-                </div>
-                <button class='send-button' type='submit'>submmit</button>
+                <button class='withGoogle' type="button">Register with Google</button>
+                <button class='send-button' type='button'>submmit</button>
+                
             </form>
         </div>
     </div>
