--- a/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
+++ b/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class='options-menu'>
         <div class='incio-button'>
-            <span><a>INICIO</a></span>
+            <span><a [routerLink]="['/vista-inicio']" style="color: black; text-decoration: none;">INICIO</a></span>
         </div>
         <div class='contacto-button'>
             <span><a>REGISTRO DE VEHÍCULOS</a></span>
