--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,1 +1,15 @@
-<p>vista-inicio-sesion works!</p>
+<div class="ventana">
+    <div class="contenedor">
+        <div class="inicio">
+            <span>INICIO DE SESIÓN</span>
+        </div>
+        <div class="cuadros">
+            <form action="">
+                <label for="">EMAIL<input type="email" placeholder="correo" class="
+                    email" required></label>
+                <label for="">CONTRASEÑA<input type="password" placeholder="contraseña" class="password" required></label>
+            </form>
+        </div>
+    </div>
+
+</div>
