--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
@@ -10,24 +10,25 @@
     <div class='form-square'>
         <div class='form-square-background'>
             <form class='form'>
-                <div class='form-tittle'>
-                    <span>Create Post</span>
-                </div>
                 <div class='group1'>
-                    <input type="text" placeholder="Enter ID" formControlName="ID" required><span class='bar'></span>
-                    <label for=''>ID</label>
+                    <input type="text" required><span class='bar'></span>
+                    <label for=''>NOMBRE Y APELLIDO</label>
                 </div>
                 <div class='group2'>
-                    <input type="text" placeholder="Enter Title" formControlName="title" required><span class='bar'></span>
-                    <label for=''>Title</label>
+                    <input type="text" required><span class='bar'></span>
+                    <label for=''>CEDULA DE IDENTIDAD</label>
                 </div>
                 <div class='group3'>
-                    <input type="text" placeholder="Enter Category" formControlName="category" required><span class='bar'></span>
-                    <label for=''>Category</label>
+                    <input type="text" required><span class='bar'></span>
+                    <label for=''>FECHA DE NACIMIENTO</label>
                 </div>
                 <div class='group4'>
-                    <input type="text" placeholder="Enter Body" formControlName="body" required><span class='bar'></span>
-                    <label for=''>Body</label>
+                    <input type="text" required><span class='bar'></span>
+                    <label for=''>LUGAR DE RESIDENCIA</label>
+                </div>
+                <div class='group4'>
+                    <input type="text" required><span class='bar'></span>
+                    <label for=''>NUMERO DE TELÉFONO</label>
                 </div>
                 <button class='send-button' type='submit'>submmit</button>
             </form>
