--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.scss
@@ -21,6 +21,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    color: #F2CA63;
 }
 .ventana .cuadros{
     width: 30%;
