--- a/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
+++ b/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
@@ -1,1 +1,18 @@
-<p>vista-registrarse works!</p>
+<app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
+<app-navbar-pagina-principal></app-navbar-pagina-principal>
+<div class="ventana">
+    
+        <div class="inicio">
+            <span>INICIO DE SESIÓN</span>
+        </div>
+        <div class="cuadros">
+            <form action="" class="form-square">
+                <div class="info"><label for="">EMAIL</label><input type="email" placeholder="correo" required></div>
+                <div class="info"><label for="">CONTRASEÑA<input type="password" placeholder="contraseña" required></label></div>
+                <div class="info"><label for="">VERIFIQUE CONTRASEÑA<input type="password" placeholder="verifique contraseña" required></label></div>
+                <div class="enviar"><button class='send-button' type='button'>REGISTRARSE</button></div>
+            </form>
+        </div>
+   
+
+</div>
