terminado de vistas de perfil mecanico

--- a/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-datos-perfil-mecanico/vista-datos-perfil-mecanico.component.html
@@ -30,7 +30,7 @@
                     <input type="text" required><span class='bar'></span>
                     <label for=''>NUMERO DE TELÉFONO</label>
                 </div>
-                <button class='send-button' type='submit'>submmit</button>
+                <button class='send-button' type='submit'>GUARDAR</button>
             </form>
         </div>
     </div>
