--- a/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
+++ b/src/app/components/perfilMecanico/nabvar-perfil-mecanico/nabvar-perfil-mecanico.component.html
@@ -9,10 +9,10 @@
             <span><a [routerLink]="['/vista-inicio']" style="color: black; text-decoration: none;">INICIO</a></span>
         </div>
         <div class='contacto-button'>
-            <span><a>REGISTRO DE VEHÍCULOS</a></span>
+            <span><a [routerLink]="['/vista-registrar-vehiculo-mecanico']" style="color: black; text-decoration: none;">REGISTRO DE VEHÍCULOS</a></span>
         </div>
         <div class='about-button'>
-            <span><a>VEHÍCULOS REGISTRADOS</a></span>
+            <span><a [routerLink]="['/vista-vehiculos-rehistrados-mecanicos']" style="color: black; text-decoration: none;">VEHÍCULOS REGISTRADOS</a></span>
         </div>
     </div>
 </div>
