--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.scss
@@ -1,4 +1,3 @@
-
 .wrapper{
     height: 80%;
     width: 75%;
@@ -32,13 +31,38 @@
     margin-top: 20px;
     display: flex;
     justify-content: center;
-    height: 80%;
+    height: 85%;
     width: 70%;
-    padding: 20px;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     background-color: rgb(255, 201, 51);
 }
 
 .form-square .form-square-background .form{
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .columnas{
+    display: flex;
+    justify-content: space-between;
+    height: 90%;
+}
+
+.form-square .form-square-background .form .columna1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .columna2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .columna3{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,20 +78,19 @@
 }
 
 .form-square .form-square-background .send-button{
-    height: 170px;
+    height: 35px;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px; 
     font-weight: bold;
-    margin-top: 15px;
+    margin-top: 7px;
     border-radius: 5px;
     background-color: white;
     border-color: black;
-    
 }
 
 input{
-    width: 600px;
+    width: 200px;
     height: 10px;
     border-radius: 5px;                      
     font-size: 15px;            
@@ -79,18 +102,6 @@ input{
 
 label{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px; 
+    font-size: 13px; 
     font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-
-
-
