--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.scss
@@ -1,4 +1,3 @@
-
 .wrapper{
     height: 80%;
     width: 75%;
@@ -18,10 +17,42 @@
     color: rgb(255, 201, 51);
 }
 
-//------------> form
+
+//------>SEGUNDO BUSCADOR
+
+.wrapper .input-section{
+    height: 20%;
+    width: 100%;
+    display: flex;
+}
+
+.wrapper .input-section .input{
+    height: 65%;
+    width: 55%;
+    margin-left: 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px; 
+    font-weight: bold;
+    margin-top: 20px;
+    color: white;
+}
+
+.wrapper .input-section .input-button{
+    height: 30px;
+    width: 70px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 15px; 
+    font-weight: bold;
+    margin-top: 30px;
+    border-radius: 5px;
+    background-color: white;
+    border-color: black;
+}
+
+//------> FORM
 
 .form-square{
-    height: 95%;
+    height: 75%;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -29,16 +60,50 @@
 }
 
 .form-square .form-square-background{
-    margin-top: 20px;
+    margin-top: 5px;
     display: flex;
     justify-content: center;
-    height: 80%;
+    height: 85%;
     width: 70%;
-    padding: 20px;
+    padding-bottom: 25px;
+    padding-top: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     background-color: rgb(255, 201, 51);
 }
 
 .form-square .form-square-background .form{
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .identificador{
+    display: flex;
+    justify-content: center;
+    height: 10%;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px; 
+    font-weight: bold;
+}
+
+.form-square .form-square-background .form .columnas{
+    display: flex;
+    justify-content: space-between;
+    height: 80%;
+}
+
+.form-square .form-square-background .form .columna1{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .columna2{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.form-square .form-square-background .form .columna3{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -54,20 +119,19 @@
 }
 
 .form-square .form-square-background .send-button{
-    height: 170px;
+    height: 35px;
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px; 
     font-weight: bold;
-    margin-top: 15px;
+    margin-top: 7px;
     border-radius: 5px;
     background-color: white;
     border-color: black;
-    
 }
 
 input{
-    width: 600px;
+    width: 500px;
     height: 10px;
     border-radius: 5px;                      
     font-size: 15px;            
@@ -79,18 +143,7 @@ input{
 
 label{
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 12px; 
+    font-size: 13px; 
     font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
-
-
 
