--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
@@ -1,1 +1,29 @@
-<p>vista-about-us works!</p>
+<app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
+<app-navbar-pagina-principal></app-navbar-pagina-principal>
+<div class="ventana">
+    <div class="contenedor">
+        <div class="inicio">
+           <img src="" alt="">
+        </div>
+        <div class="cuadros">
+                <div class="titulo"><span>Acerca de nosotros</span></div>
+                <div class="info"><p>Somos un taller mecánico exclusivo ubicado en una de las mejores zonas de Caracas. <br>
+
+                    Nos dedicamos a la mecánica ligera, cambios estéticos e instalación de accesorios que se encuentran disponibles en nuestro showroom.
+                    <br>
+                    Actividades: <br>
+                    Mecánica Ligera <br>
+                    Cambio de aceite <br>
+                    Cambio de cauchos y rines <br>
+                    Pulitura <br>
+                    Instalación de Papel ahumado <br>
+                    Instalación de accesorios (equipos de sonido, vigas, roof racks, entre otros) <br>
+                    Rotulaciones <br>
+                    
+                    
+                    Tenemos un equipo altamente calificado para las distintas actividades.</p>    
+                </div>             
+        </div>
+    </div>
+
+</div>
