--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
@@ -1,1 +1,32 @@
-<p>vista-contactanos works!</p>
+<app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
+<app-navbar-pagina-principal></app-navbar-pagina-principal>
+<div class="ventana">
+    <div class="contenedor">
+        <div class="inicio">
+           <div class="imagen"><img src="" alt=""></div>
+        </div>
+        <div class="cuadros">
+                <div class="titulo"><span>UBICACIÓN</span></div>
+                <div class="ubi"><span>Estación de servicio Texaco, <br> Av. ppal de Las Mercedes <br>
+                    Caracas, Venezuela</span></div>
+                <div class="contacto"><span>CONTACTO</span></div>
+                <div class="redes">
+                    <div class="logoig">
+                        <img src="" alt="">
+                    </div>
+                    <div class="arroba">
+                        <span>@paralelo4x4store</span>
+                    </div>
+                </div>   
+                <div class="redes">
+                    <div class="logoig">
+                        <img src="" alt="">
+                    </div>
+                    <div class="arroba">
+                        <span>+58 212 991 49 10</span>
+                    </div>
+                </div>       
+        </div>
+    </div>
+
+</div>
