--- a/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.html
+++ b/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.html
@@ -2,12 +2,12 @@
     <div class='buttons'>
         <div class='iniciar-sesion'>
             <div class='cuadro1'>
-                <span>INICIAR SESIÓN</span>
+               <a [routerLink]="['/inicio']">INICIAR SESIÓN</a> 
             </div>
         </div>
         <div class='registrase'>
             <div class='cuadro2'>
-                <span>REGISTRARSE</span>
+                <a [routerLink]="['/registro']">REGISTRARSE</a> 
             </div>
         </div>
     </div>
