--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.html
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.html
@@ -4,13 +4,13 @@
     </div>
     <div class='options-menu'>
         <div class='incio-button'>
-            <span><a>INICIO</a></span>
+            <span><a [routerLink]="['']">INICIO</a></span>
         </div>
         <div class='contacto-button'>
-            <span><a>CONTACTO</a></span>
+            <span><a [routerLink]="['/contactanos']">CONTACTO</a></span>
         </div>
         <div class='about-button'>
-            <span><a>ACERCA DE NOSOTROS</a></span>
+            <span><a [routerLink]="['/about-us']" >ACERCA DE NOSOTROS</a></span>
         </div>
     </div>
 </div>
