--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
@@ -1,6 +1,7 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
 <div class="ventana">
+    <div class="espacio"></div>
     <div class="contenedor">
         <div class="inicio">
            <div class="imagen"><img src="" alt=""></div>
