--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,15 +1,15 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
 <div class="ventana">
-    
+        <div class="espacio"></div>
         <div class="inicio">
             <span>INICIO DE SESIÓN</span>
         </div>
         <div class="cuadros">
             <form action="" class="form-square">
-                <div class="info"><label for="">EMAIL</label><input type="email" placeholder="correo" required></div>
+                <div class="info"><label for="">CORREO ELECTRÓNICO</label><input type="email" placeholder="correo" required></div>
                 <div class="info"><label for="">CONTRASEÑA<input type="password" placeholder="contraseña" required></label></div>
-                <div class="enviar"><button class='send-button' type='button'>submmit</button></div>
+                <div class="enviar"><button class='send-button' type='button'>INICIAR SESIÓN</button></div>
             </form>
         </div>
    
