--- a/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
+++ b/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
@@ -1,9 +1,9 @@
 <app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
 <app-navbar-pagina-principal></app-navbar-pagina-principal>
 <div class="ventana">
-    
+        <div class="espacio"></div>
         <div class="inicio">
-            <span>INICIO DE SESIÓN</span>
+            <span>REGISTRO DE USUARIO</span>
         </div>
         <div class="cuadros">
             <form action="" class="form-square">
