--- a/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-pagina-principal/navbar-pagina-principal.component.scss
@@ -1,6 +1,7 @@
 .navbar{
     width: 75%;
     height: 20%;
+    background-color: #494949;
 }
 
 .navbar .logo-menu{
@@ -37,6 +38,14 @@
     justify-content: center;
     margin-left: 20px;
 }
+.navbar .options-menu .incio-button a{
+    color: black;
+    text-decoration: none;
+}
+.navbar .options-menu .incio-button a:hover{
+    color: black;
+    text-decoration: underline;
+}
 
 .navbar .options-menu .contacto-button{
     background-color: rgb(255, 201, 51);
@@ -46,6 +55,14 @@
     width: 30%;
     display: flex;
     justify-content: center;
+}
+.navbar .options-menu .contacto-button a{
+    color: black;
+    text-decoration: none;
+}
+.navbar .options-menu .contacto-button a:hover{
+    color: black;
+    text-decoration: underline;
 }
 
 .navbar .options-menu .about-button{
@@ -58,6 +75,15 @@
     justify-content: center;
     margin-right: 20px;
 }
+.navbar .options-menu .about-button a{
+    color: black;
+    text-decoration: none;
+}
+.navbar .options-menu .about-button a:hover{
+    color: black;
+    text-decoration: underline;
+}
+
 
 
 
