--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
@@ -1,42 +1,40 @@
 .ventana{
     width: 100%;
     height: 80%;
-    background-color: yellow;
-    
-    
+    background-color: #494949;
+}
+.ventana .espacio{
+    width: 100%;
+    height: 5%;
 }
 .ventana .contenedor{
     width: 70%;
     height: 90%;
     margin-left: 2.5% ;
-    background-color: blueviolet;
 }
 
 .ventana .inicio{
     float: left;
     width: 50%;
     height: 100%;
-    background-color: green;
     text-align: center;
     font-weight: bold;
     margin: auto;
     display: flex;
     justify-content: center;
-    
+    background-color: white;
 }
 
 .ventana .cuadros{
     float: right;
     width: 50%;
     height: 100%;
-    background-color: rebeccapurple;
    
     
 }
 .ventana .cuadros .titulo{
     width: 100%;
     height: 20%;
-    background-color: brown;
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -51,6 +49,8 @@
     color: #F2CA63;
     font-size: 24px;
     font-weight: bold;
+    font-size: 24px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
    
 }
@@ -65,7 +65,6 @@
 .ventana .cuadros .info{
     width: 100%;
     height: 80%;
-    background-color: grey;
     color: white;
     text-align: left;
  
