--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
@@ -1,33 +1,35 @@
 .ventana{
     width: 100%;
     height: 80%;
-    background-color: yellow;
+    background-color: #494949;
     
     
+}
+.ventana .espacio{
+    width: 100%;
+    height: 5%;
 }
 .ventana .contenedor{
     width: 70%;
     height: 90%;
     margin-left: 2.5% ;
-    background-color: blueviolet;
 }
 
 .ventana .contenedor .inicio{
     float: left;
     width: 50%;
     height: 100%;
-    background-color: green;
     text-align: center;
     font-weight: bold;
     margin: auto;
     display: flex;
     justify-content: center;
+    background-color: white;
     
 }
 .ventana .contenedor .inicio .imagen{
     width: 95%;
     height: 90%;
-    background-color: yellow;
     margin: auto;
     display: flex;
     justify-content: center;
@@ -38,14 +40,12 @@
     float: right;
     width: 50%;
     height: 100%;
-    background-color: rebeccapurple;
    
     
 }
 .ventana .cuadros .titulo{
     width: 100%;
     height: 20%;
-    background-color: brown;
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -55,7 +55,6 @@
 .ventana .contenedor .cuadros .ubi{
     width: 100%;
     height: 20%;
-    background-color: royalblue;
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -70,7 +69,6 @@
 .ventana .contenedor .cuadros .contacto{
     width: 100%;
     height: 20%;
-    background-color: greenyellow;
     text-align: center;
     display: flex;
     flex-direction: row;
@@ -84,22 +82,21 @@
 .ventana .contenedor .cuadros .redes{
     width: 60%;
     height: 8%;
-    background-color: olive;
     margin: auto;
     
 }
 .ventana .contenedor .cuadros .redes .logoig{
     width: 20%;
-    height: 100%;
+    height: 95%;
     float: left;
-    background-color: yellow;
+    background-color: white;
+   
     
 }
 .ventana .contenedor .cuadros .redes .arroba{
     width: 80%;
     height: 100%;
     float: right;
-    background-color: rosybrown;
     
 }
 .ventana .contenedor .cuadros .redes .arroba span{
@@ -120,7 +117,8 @@
     flex-direction: row;
     justify-content: center;
     color: #F2CA63;
-    font-size: 32px;
+    font-size: 24px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     
    
@@ -132,6 +130,7 @@
     justify-content: center;
     color: #F2CA63;
     font-size: 24px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     
    
