--- a/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
@@ -1,13 +1,12 @@
 .ventana{
     width: 75%;
     height: 100%;
-    background-color: black; 
+    background-color: #494949;
   
 }
 .ventana .logo{
     width: 100%;
     height: 180px;
-    background-color: red;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -24,18 +23,25 @@
 .ventana .contenedor{
     width: 350px;
     height: 250px;
-    background-color: blueviolet;
     float: left;
     margin: 50px;
     margin-top: 10%;
    
     
 }
+a{
+    color: black;
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+}
 .ventana .contenedor .botones{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: yellow;
+    background-color: rgb(255, 201, 51);
+    border: black 1px solid;
     margin: auto;
     margin-top: 15px;
     width: 70%;
@@ -45,6 +51,7 @@
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 .ventana .contenedor .botones:hover{
     background-color: #B9C5CE;
 }
