--- a/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.scss
@@ -1,14 +1,17 @@
 .ventana{
     width: 100%;
     height: 80%;
-    background-color: yellow;
+    background-color: #494949;
     
 }
+.ventana .espacio{
+    width: 100%;
+    height: 20%;
 
+}
 .ventana .inicio{
     width: 30%;
     height: 10%;
-    background-color: green;
     text-align: center;
     font-weight: bold;
     margin: auto;
@@ -22,11 +25,12 @@
     flex-direction: row;
     justify-content: center;
     color: #F2CA63;
+    font-size: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .ventana .cuadros{
     width: 30%;
     height: 40%;
-    background-color: rebeccapurple;
     margin: auto;
     display: flex;
     flex-direction: row;
@@ -35,44 +39,48 @@
 .ventana .cuadros .form-square{
     width: 100%;
     height: 100%;
-    background-color: rosybrown;
+
     
 }
 .ventana  .cuadros .form-square .info{
     width: 100%;
     height: 40%;
-    background-color: orange;
     
     text-align: left;
    
 }
 .ventana  .cuadros .form-square .info input{
     width: 90%;
-    height: 35%;
+    height: 45%;
     background-color: white;
     border: black 2px solid;
     display: flex;
     flex-direction: column;
     justify-content: center;
     margin: auto;
+    border-radius: 12px;
 } 
 .ventana  .cuadros .form-square .info label{
    margin-left: 8%;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 12px;
    font-weight: bold;
+   color: white;
 } 
 .ventana .cuadros .form-square .enviar {
     height: 20%;
     width: 100%;
-    background-color: blue;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     
     
 }
 .ventana .cuadros .form-square .enviar .send-button{
     height: 100%;
-    width: 100%;
-    font-family: Arial, Helvetica, sans-serif;
+    width: 90%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px; 
     font-weight: bold;
     background-color: #F2CA63;
