--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class='form-square'>
         <div class='form-square-background'>
-            <form class='form'>
+            <form [formGroup]="postForm" class='form'>
                 <div class='columnas'>
                     <div class='columna1'>
                         <div class='group1'>
@@ -52,29 +52,29 @@
                         </div>
                         <div class='group10'>
                             <input type="text" required><span class='bar'></span>
-                            <label for=''>REPRODUCTOR</label>
+                            <label for=''>REQUERIMIENTOS DEL CLIENTE</label>
                         </div>
                     </div>
                     <div class=columna3>
                         <div class='group5'>
-                            <input type="text" required><span class='bar'></span>
+                            <input type="checkbox" required><span class='bar'></span>
                             <label for=''>CAUCHO DE REPUESTO</label>
                         </div>
                         <div class='group6'>
-                            <input type="text" required><span class='bar'></span>
+                            <input type="checkbox" required><span class='bar'></span>
                             <label for=''>LLAVES</label>
                         </div>
                         <div class='group7'>
-                            <input type="text" required><span class='bar'></span>
+                            <input type="checkbox" required><span class='bar'></span>
                             <label for=''>GATO</label>
                         </div>
                         <div class='group8'>
-                            <input type="text" required><span class='bar'></span>
+                            <input type="checkbox" required><span class='bar'></span>
                             <label for=''>HERRAMIENTAS</label>
                         </div>
                         <div class='group9'>
-                            <input type="text" required><span class='bar'></span>
-                            <label for=''>REQUERIMIENTOS DEL CLIENTE</label>
+                            <input type="checkbox" required><span class='bar'></span>
+                            <label for=''>REPRODUCTOR</label>
                         </div>
                     </div>
                 </div>
