guardado para cambiar de branch

--- a/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.html
+++ b/src/app/pages/perfilMecanico/vista-registro-vehiculo-mecanico/vista-registro-vehiculo-mecanico.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class='form-square'>
         <div class='form-square-background'>
-            <form [formGroup]="postForm" class='form'>
+            <form [formGroup]="registroVehiculoForm" class='form'>
                 <div class='columnas'>
                     <div class='columna1'>
                         <div class='group1'>
