--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,6 +1,5 @@
-<app-navbar-derecho-pagina-principal></app-navbar-derecho-pagina-principal>
-<app-navbar-pagina-principal></app-navbar-pagina-principal>
-<div class="ventana">
+<app-vista-registrarse [sendFormEvent]="handleLogin($event)"></app-vista-registrarse>
+<!-- class="ventana">
         <div class="espacio"></div>
         <div class="inicio">
             <span>INICIO DE SESIÓN</span>
@@ -14,4 +13,4 @@
         </div>
    
 
-</div>
+-->
