--- a/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
+++ b/src/app/pages/paginaPrincipal/vista-registrarse/vista-registrarse.component.html
@@ -3,15 +3,41 @@
 <div class="ventana">
         <div class="espacio"></div>
         <div class="inicio">
-            <span>REGISTRO DE USUARIO</span>
+            <span>ENTRAR AL SISTEMA</span>
         </div>
         <div class="cuadros">
-            <form action="" class="form-square">
-                <div class="info"><label for="">EMAIL</label><input type="email" placeholder="correo" required></div>
-                <div class="info"><label for="">CONTRASEÑA<input type="password" placeholder="contraseña" required></label></div>
-                <div class="info"><label for="">VERIFIQUE CONTRASEÑA<input type="password" placeholder="verifique contraseña" required></label></div>
-                <div class="enviar"><button class='send-button' type='button'>REGISTRARSE</button></div>
+            <form 
+             [formGroup]="authForm"
+             (ngSubmit)="onSubmit()"
+             class="form-square">
+                <div class="info">
+                    <label for="email">EMAIL</label>
+                    <input
+                     type="email"
+                     id="email"
+                     formControlName="email"
+                     placeholder="correo"
+                     required></div>
+                <div class="info">
+                    <label for="password">CONTRASEÑA</label>
+                        <input 
+                         type="password" 
+                         id="password"
+                         formControlName="password"
+                         placeholder="contraseña"
+                         required></div>
+                <div class="info" *ngIf="withDisplayName">
+                    <label for="">VERIFIQUE CONTRASEÑA</label>
+                        <input
+                          type="password"
+                          id="passwordbien"
+                          formControlName="displayname"
+                          placeholder="verifique contraseña"
+                          required></div>
+                <div class="enviar">
+                    <button class='send-button' type='button'>REGISTRARSE</button></div>
             </form>
+            <button type="button" (click)="handleGoogleLogin()" class='send-button'>Sign up with Google</button>
         </div>
    
 
