--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,4 +1,4 @@
-<app-vista-registrarse [sendFormEvent]="handleLogin($event)"></app-vista-registrarse>
+<app-authform [withDisplayName]="false" (sendFormEvent)="handleLogin()"></app-authform>
 <!-- class="ventana">
         <div class="espacio"></div>
         <div class="inicio">
