--- a/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
+++ b/src/app/pages/perfilMecanico/vista-vehiculos-registrados/vista-vehiculos-registrados.component.html
@@ -8,38 +8,45 @@
         </div>
     </div>
     <div class='input-section'>
-        <div class='input'>
-            <input type="text" required><span class='bar'></span>
-            <span>INGRESA EL IDENTIFICADOR DEL VEHICULO</span>
-        </div>
-        <button class='input-button'>BUSCAR</button>
+        <form [formGroup]="registroVehiculoForm" (ngSubmit)='search()' class='input-form'>
+            <div class='input'>
+                <input type="text" formControlName="placa" required><span class='bar'></span>
+                <span>INGRESA LA PLACA DEL VEHICULO</span>
+            </div>
+            <button class='input-button' type="submit">BUSCAR</button>
+        </form>
     </div>
 
     <!--este forma debe de ser un ng if-->
 
     <div class='form-square'>
         <div class='form-square-background'>
-            <form class='form'>
+            <form [formGroup]="infoVehiculo" class='cahnges-form'>  <!--este es el form-->
                 <div class='identificador'>
-                    <span>IDENTIFICADOR DEL VEHICULO</span>
+                    <span *ngIf="placa">{{placa}}</span>
+                    <span *ngIf="!placa">SIN RESULTADOS</span>
                 </div>
                 <div class='columnas'>
                     <div class='columna1'>
                         <div class='group1'>
-                            <input type="text" required><span class='bar'></span>
+                            <input formControlName="repuestos" type="text" required><span class='bar'></span>
                             <label for=''>REPUESTOS NECESARIOS</label>
                         </div>
                         <div class='group2'>
-                            <input type="text" required><span class='bar'></span>
+                            <input formControlName="procedimiento" type="text" required><span class='bar'></span>
                             <label for=''>PROCEDIMIENTO APLICADO</label>
                         </div>
                         <div class='group3'>
-                            <input type="text" required><span class='bar'></span>
+                            <input type="text" formControlName="diagnostico" required><span class='bar'></span>
                             <label for=''>DIAGNÓSTICO</label>
                         </div>
                     </div>
                 </div>
-                <button class='send-button' type='submit'>GUARDAR</button>
+                <div class='botones'>
+                    <button class='send-button' type='submit'>GUARDAR ORDEN</button>
+                    <button class='send-button' type='submit'>CERRAR ORDEN</button>
+                    <button class='send-button' type='submit'>ELIMINAR ORDEN</button>
+                </div>
             </form>
         </div>
     </div>
