--- a/src/app/components/paginaPrincipal/authform/authform.component.html
+++ b/src/app/components/paginaPrincipal/authform/authform.component.html
@@ -10,6 +10,14 @@
              [formGroup]="authForm"
              (ngSubmit)="onSubmit()"
              class="form-square">
+             <div class="info" *ngIf="withDisplayName">
+                <label for="passwordbien">NOMBRE</label>
+                    <input
+                      type="text"
+                      id="name"
+                      formControlName="displayname"
+                      placeholder="Escriba su nombre"
+                      required></div>
                 <div class="info">
                     <label for="email">EMAIL</label>
                     <input
@@ -18,7 +26,7 @@
                      formControlName="email"
                      placeholder="correo"
                      required></div>
-                <div class="info">
+                <div class="info"> 
                     <label for="password">CONTRASEÑA</label>
                         <input 
                          type="password" 
@@ -26,16 +34,9 @@
                          formControlName="password"
                          placeholder="contraseña"
                          required></div>
-                <div class="info" *ngIf="withDisplayName">
-                    <label for="">VERIFIQUE CONTRASEÑA</label>
-                        <input
-                          type="password"
-                          id="passwordbien"
-                          formControlName="displayname"
-                          placeholder="verifique contraseña"
-                          required></div>
+                
                 <div class="enviar">
-                    <button class='send-button' type='button'>REGISTRARSE</button></div>
+                    <button class='send-button' type='submit'>SEND</button></div>
             </form>
             <button type="button" (click)="handleGoogleLogin()" class='send-button'>Sign up with Google</button>
         </div>
