--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,4 +1,4 @@
-<app-authform [withDisplayName]="false" (sendFormEvent)="handleLogin()"></app-authform>
+<app-authform [withDisplayName]="false" (sendFormEvent)="handleLogin($event)"></app-authform>
 <!-- class="ventana">
         <div class="espacio"></div>
         <div class="inicio">
