--- a/src/app/components/paginaPrincipal/authform/authform.component.html
+++ b/src/app/components/paginaPrincipal/authform/authform.component.html
@@ -37,8 +37,9 @@
                 
                 <div class="enviar">
                     <button class='send-button' type='submit'>SEND</button></div>
+                <div class="enviar"><button type="button" (click)="handleGoogleLogin()" class='send-button'>Sign up with Google</button></div>    
             </form>
-            <button type="button" (click)="handleGoogleLogin()" class='send-button'>Sign up with Google</button>
+            
         </div>
    
 
