--- a/src/app/components/paginaPrincipal/authform/authform.component.scss
+++ b/src/app/components/paginaPrincipal/authform/authform.component.scss
@@ -78,12 +78,16 @@
     
 }
 .ventana .cuadros .form-square .enviar .send-button{
-    height: 100%;
+    height: 80%;
     width: 90%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px; 
     font-weight: bold;
     background-color: #F2CA63;
     border-color: black;
+    
+}
+.ventana .cuadros .form-square .enviar .send-button:hover{
+    cursor: pointer;
     
 }
