--- a/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-derecho-cliente/navbar-derecho-cliente.component.scss
@@ -12,7 +12,6 @@
     background-color: rgb(255, 201, 51);
     text-align: center;
     font-family: 'Athiti', sans-serif;
-    font-style: normal;
     font-size: 15px;
     font-weight: bold;
     color: white;
@@ -35,14 +34,6 @@
     padding-right: 2px;
     width: 50%;
 }
-.right-navbar .iniciar-sesion .cuadro1 a{
-    color: white;
-    text-decoration: none;
-}
-.right-navbar .iniciar-sesion .cuadro1 a:hover{
-    color: white;
-    text-decoration: underline;
-}
 
 .right-navbar .buttons .registrase{
     height: 20px;
@@ -58,18 +49,7 @@
     padding-left: 2px;
     padding-right: 2px;
     width: 50%;
-    
-}
-
-.right-navbar .buttons .registrase .cuadro2 a{
-    color: white;
-    text-decoration: none;
-    
-}
-.right-navbar .buttons .registrase .cuadro2 a:hover{
-    color: white;
-    text-decoration: underline;
-    
+    margin-top: 17%;
 }
 
 .right-navbar .fotos{
