--- a/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
+++ b/src/app/components/perfilCliente/navbar-perfil-cliente/navbar-perfil-cliente.component.scss
@@ -3,32 +3,34 @@
 .navbar{
     width: 75%;
     height: 20%;
-    background-color: #494949;
 }
 
 .navbar .logo-menu{
-    width: 30%;
-    height: 75%;
+    width: 100%;
+    height: 65%;
+    background-color: rgb(66, 66, 66);
+    padding-bottom: 10px;
+}
+
+.navbar .logo-menu .contenedor{
+    width: 35%;
+    height: 100%;
     padding-top: 10px;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.navbar .logo-menu .logo{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
 
 .navbar .options-menu{
-    height: 50%;
+    height: 30%;
     width: 100%;
     display: flex;
     justify-content: space-between;
     font-family: 'Athiti', sans-serif;
-    font-style: normal;
     font-size: 15px;
     font-weight: bold;
+    background-color: rgb(66, 66, 66);
+    padding-bottom: 10px;
 }
 
 .navbar .options-menu .incio-button{
@@ -41,14 +43,6 @@
     justify-content: center;
     margin-left: 20px;
 }
-.navbar .options-menu .incio-button a{
-    color: black;
-    text-decoration: none;
-}
-.navbar .options-menu .incio-button a:hover{
-    color: black;
-    text-decoration: underline;
-}
 
 .navbar .options-menu .contacto-button{
     background-color: rgb(255, 201, 51);
@@ -58,14 +52,6 @@
     width: 30%;
     display: flex;
     justify-content: center;
-}
-.navbar .options-menu .contacto-button a{
-    color: black;
-    text-decoration: none;
-}
-.navbar .options-menu .contacto-button a:hover{
-    color: black;
-    text-decoration: underline;
 }
 
 .navbar .options-menu .about-button{
@@ -78,16 +64,5 @@
     justify-content: center;
     margin-right: 20px;
 }
-.navbar .options-menu .about-button a{
-    color: black;
-    text-decoration: none;
-}
-.navbar .options-menu .about-button a:hover{
-    color: black;
-    text-decoration: underline;
-}
-
-
-
 
 
