--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .ventana{
     width: 100%;
     height: 80%;
@@ -73,7 +75,8 @@
     font-size: 16px;
     margin-left: 5%;
     padding-top: 5%;
-    font-family: Arial, Helvetica, sans-serif; 
+    font-family: 'Athiti', sans-serif;
+    font-style: normal;
     line-height: 20px;
 }
 
