--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Athiti:wght@700&display=swap');
+
 .ventana{
     width: 100%;
     height: 80%;
@@ -104,7 +106,8 @@
     color: white;
     font-weight: bold;
     margin-left: 8%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif;
+    font-style: normal;
     display: flex;
     flex-direction: column;
     justify-content: center;
