pagina principal decorada

--- a/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.html
+++ b/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.html
@@ -2,7 +2,7 @@
     <div class='buttons'>
         <div class='iniciar-sesion'>
             <div class='cuadro1' *ngIf="!user">
-               <a [routerLink]="['/inicio']">INICIAR SESIÓN</a> 
+               <a [routerLink]="['/inicio-sesion']">INICIAR SESIÓN</a> 
             </div>
         </div>
         <div class='registrase' *ngIf="!user">
