--- a/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
+++ b/src/app/pages/paginaPrincipal/vista-about-us/vista-about-us.component.html
@@ -7,19 +7,19 @@
            <img src="" alt="">
         </div>
         <div class="cuadros">
-                <div class="titulo"><span>Acerca de nosotros</span></div>
+                <div class="titulo"><span>Equipo Paralelo 4x4</span></div>
                 <div class="info"><p>Somos un taller mecánico exclusivo ubicado en una de las mejores zonas de Caracas. <br>
 
                     Nos dedicamos a la mecánica ligera, cambios estéticos e instalación de accesorios que se encuentran disponibles en nuestro showroom.
                     <br>
-                    Actividades: <br>
-                    Mecánica Ligera <br>
-                    Cambio de aceite <br>
-                    Cambio de cauchos y rines <br>
-                    Pulitura <br>
-                    Instalación de Papel ahumado <br>
-                    Instalación de accesorios (equipos de sonido, vigas, roof racks, entre otros) <br>
-                    Rotulaciones <br>
+                    ACTIVIDADES: <br>
+                    -Mecánica Ligera <br>
+                    -Cambio de aceite <br>
+                    -Cambio de cauchos y rines <br>
+                    -Pulitura <br>
+                    -Instalación de Papel ahumado <br>
+                    -Instalación de accesorios (equipos de sonido, vigas, roof racks, entre otros) <br>
+                    -Rotulaciones <br>
                     
                     
                     Tenemos un equipo altamente calificado para las distintas actividades.</p>    
