--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.html
@@ -4,7 +4,10 @@
     <div class="espacio"></div>
     <div class="contenedor">
         <div class="inicio">
-           <div class="imagen"><img src="" alt=""></div>
+            <google-map width="450px"
+            height="418px"
+            [center]="position">
+            </google-map>
         </div>
         <div class="cuadros">
                 <div class="titulo"><span>UBICACIÓN</span></div>
@@ -13,7 +16,7 @@
                 <div class="contacto"><span>CONTACTO</span></div>
                 <div class="redes">
                     <div class="logoig">
-                        <img src="" alt="">
+                        <img src="https://image.flaticon.com/icons/png/512/174/174855.png" alt="">
                     </div>
                     <div class="arroba">
                         <span>@paralelo4x4store</span>
@@ -21,7 +24,7 @@
                 </div>   
                 <div class="redes">
                     <div class="logoig">
-                        <img src="" alt="">
+                        <img src="http://assets.stickpng.com/images/580b57fcd9996e24bc43c543.png" alt="">
                     </div>
                     <div class="arroba">
                         <span>+58 212 991 49 10</span>
@@ -31,3 +34,4 @@
     </div>
 
 </div>
+
