--- a/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.scss
+++ b/src/app/components/paginaPrincipal/navbar-derecho-pagina-principal/navbar-derecho-pagina-principal.component.scss
@@ -84,7 +84,8 @@
 .right-navbar .fotos .foto1{
     height: 40%;
     width: 80%;
-    background-color: black;
+    background-image: url(https://static.straitstimes.com.sg/s3fs-public/articles/2017/12/11/bp_car_111217_94.jpg);
+    background-size: 260px;
     margin-bottom: 10px;
     margin: auto;
 }
@@ -92,7 +93,8 @@
 .right-navbar .fotos .foto2{
     height: 40%;
     width: 80%;
-    background-color: black;
+    background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/13/TE71_2T-GEU.jpg);
+    background-size: 260px;
     margin: auto;
 }
 
