--- a/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-contactanos/vista-contactanos.component.scss
@@ -63,7 +63,7 @@
     justify-content: center;
     font-size: 16px;
     font-weight: bold;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Athiti', sans-serif;
     color: white;
     line-height: 30px;
     
@@ -77,7 +77,6 @@
     justify-content: center;
     font-size: 16px;
     font-weight: bold;
-    color: white;
     line-height: 30px;
     margin-top: 10px;
 }
@@ -91,7 +90,6 @@
     width: 20%;
     height: 95%;
     float: left;
-    background-color: white;
    
     
 }
@@ -121,7 +119,7 @@
     justify-content: center;
     color: #F2CA63;
     font-size: 24px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Athiti', sans-serif;
     font-weight: bold;
     
    
@@ -133,7 +131,7 @@
     justify-content: center;
     color: #F2CA63;
     font-size: 24px;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Athiti', sans-serif;
     font-weight: bold;
     
    
