--- a/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
+++ b/src/app/pages/paginaPrincipal/vista-inicio/vista-inicio.component.scss
@@ -2,10 +2,19 @@
 
 .ventana{
     width: 75%;
-    height: 100%;
-    background-color: #494949;
-  
+    height: 100%;  
 }
+.ventana::after {
+    content: "";
+    background: url(https://cdn11.bigcommerce.com/s-48ae1/product_images/uploaded_images/garage-a.jpg);
+    opacity: 0.7;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;   
+  }
 .ventana .logo{
     width: 100%;
     height: 180px;
