avance en el tema bd

--- a/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
+++ b/src/app/pages/paginaPrincipal/vista-inicio-sesion/vista-inicio-sesion.component.html
@@ -1,16 +1,1 @@
-<app-authform [withDisplayName]="false" (sendFormEvent)="handleLogin($event)"></app-authform>
-<!-- class="ventana">
-        <div class="espacio"></div>
-        <div class="inicio">
-            <span>INICIO DE SESIÓN</span>
-        </div>
-        <div class="cuadros">
-            <form action="" class="form-square">
-                <div class="info"><label for="">CORREO ELECTRÓNICO</label><input type="email" placeholder="correo" required></div>
-                <div class="info"><label for="">CONTRASEÑA<input type="password" placeholder="contraseña" required></label></div>
-                <div class="enviar"><button class='send-button' type='button'>INICIAR SESIÓN</button></div>
-            </form>
-        </div>
-   
-
--->
+<app-authform-inicio-sesion></app-authform-inicio-sesion>
